--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
       "@babel/preset-react"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "babel-plugin-syntax-dynamic-import"
     ]
   },
   "repository": {
@@ -52,6 +53,7 @@
     "babel-eslint": "9.x",
     "babel-loader": "^8.0.5",
     "babel-plugin-react-css-modules": "^5.2.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
@@ -77,7 +79,8 @@
     "map": false,
     "plugins": {
       "postcss-import": {},
-      "postcss-preset-env": {}
+      "postcss-preset-env": {},
+      "cssnano": {}
     }
   },
   "dependencies": {
